# franklin-lap-counter

./: .gitignore  AGENTS.md  README.md  database.py  devbox.json  driver_web_app.py  franklin-gui.py  franklin-race-recorder.py  franklin-tui.py  gui_config.py  healthcheck_web_app.py  pyproject.toml  referee_web_app.py  scoreboard_web_app.py
.github/workflows/: release.yml
docs/: audio.md  redis-message-reference.md
playbooks/: 15-franklin-user.yml  20-python-venv.yml  55-autologin-startup.yml  59-restart-franklin-gui.yml  62-bounce-web-apps.yml  64-reset-database.yml  65-hard-reset.yml  66-final-reboot.yml  README.md  ansible.cfg  deploy-franklin-gui.yml  deploy-franklin.yml  site.yml  update-franklin.yml
playbooks/group_vars/: all.yml
race/: franklin_gui_config_test.py  race_engine.py
rust/franklin-hardware-monitor/src/: main.rs
scripts/: build_deb.py  db_end_all_races.py  deploy_pi.sh  install.sh  start_dev.sh  start_franklin.py  start_franklin_gui_session.py  start_full_sim.py  update.sh
static/: audio.js  audit.html  driver.html  index.html  referee.html
systemd/: franklin-hardware-monitor.service  franklin-race-recorder.service  franklin-redis.service  franklin-web-driver.service  franklin-web-healthcheck.service  franklin-web-referee.service  franklin-web-scoreboard.service  franklin.target
